[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momsa-bench"
version = "0.1.0"
description = "Paper-inspired MSA and MOMSA implementations with benchmark harnesses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
baselines = [
  "pymoo>=0.6.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
